Docker attach with 3 streams and swagger context
Use go-swagger's new context for client params to provide request
cancellation.
