# lib/apiservers/portlayer/swagger.yml
@@ -650,32 +650,6 @@ paths:
           description: "OK"
           schema:
             format: binary
-  /interaction/{id}/detach:
-    post:
-      description: "Detaches the streams to the VIC container without closing down the streams"
-      summary: "Detach streams without closing them"
-      operationId: ContainerDetach
-      tags: ["interaction"]
-      consumes:
-        - application/octet-stream
-      produces:
-        - application/octet-stream
-      parameters:
-        - name: id
-          in: path
-          type: string
-          required: true
-      responses:
-        '500':
-          description: "Failed to detach"
-          schema:
-            $ref: "#/definitions/Error"
-        '404':
-          description: "Container not found"
-          schema:
-            $ref: "#/definitions/Error"
-        '200':
-          description: "OK"
 definitions:
   Error:
     type: object
